[package]
name = "sndiff"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
colored = "3.0.0"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
similar = "2.7.0"
termbg = "0.6.2"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
