[package]
name = "sndiff"
version = "0.2.2"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
similar = "2.7.0"
termbg = "0.6.2"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
